--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,25 +1,24 @@
 name: emoji_picker_flutter_example
 description: Demonstrates how to use the emoji_picker_flutter plugin.
 publish_to: "none"
+version: 1.0.0+1
 
 environment:
-  sdk: ">=2.17.0 <3.0.0"
-  flutter: ">=3.19.3"
+  sdk: ">=3.3.0 <4.0.0"
+  flutter: ">=3.19.0"
 
 dependencies:
   flutter:
     sdk: flutter
-
-  google_fonts: ^6.1.0
+  google_fonts: ^6.2.1
   emoji_picker_flutter:
     path: ../
 
 dev_dependencies:
-  flutter_lints: ^3.0.1
+  flutter_lints: ^3.0.2
   integration_test:
     sdk: flutter
 
 flutter:
+
   uses-material-design: true
-  assets:
-    - assets/
